[gd_scene load_steps=28 format=4 uid="uid://bj81oeyskct0"]

[ext_resource type="AudioStream" uid="uid://bcg5bvbknuelv" path="res://weapons/ally/m15/reload_1.wav" id="2_qd8bx"]
[ext_resource type="Script" uid="uid://bam8hvn4ax01a" path="res://weapons/ally/m15/m15.gd" id="2_xu0o0"]
[ext_resource type="PackedScene" uid="uid://cyyhdytcpd73i" path="res://components/bullet_spawner/basic_linear/node.tscn" id="3_1ifyx"]
[ext_resource type="AudioStream" uid="uid://d0d2lkh2xvthi" path="res://pending_assets/sounds/rifle_single.wav" id="3_ceglm"]
[ext_resource type="AudioStream" uid="uid://do8xf6v2ow800" path="res://weapons/ally/m15/reload_2.wav" id="3_dvofk"]
[ext_resource type="PackedScene" uid="uid://culkeogipbs3r" path="res://scenes/misc/randomized_audio.tscn" id="4_crth4"]
[ext_resource type="Shader" uid="uid://ctc7jwnjkk8is" path="res://weapons/ally/color_hand.gdshader" id="4_x8wmp"]
[ext_resource type="PackedScene" uid="uid://cuiahy254v43" path="res://components/fire/full_auto/_full_auto.tscn" id="6_n1vsn"]

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_uuhya"]
resource_local_to_scene = true
random_pitch = 1.5
random_volume_offset_db = 0.5
streams_count = 1
stream_0/stream = ExtResource("3_ceglm")

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_qd8bx"]
resource_local_to_scene = true
random_pitch = 1.5
random_volume_offset_db = 0.5

[sub_resource type="ShaderMaterial" id="ShaderMaterial_kqkdb"]
shader = ExtResource("4_x8wmp")
shader_parameter/og_color_1 = Color(0.675, 0, 0.776, 1)
shader_parameter/hand_color_1 = Color(0.914, 0.678, 0.49, 1)
shader_parameter/og_color_2 = Color(0.87, 0, 1, 1)
shader_parameter/hand_color_2 = Color(0.73, 0.43, 0.34, 1)

[sub_resource type="PortableCompressedTexture2D" id="PortableCompressedTexture2D_uqj3h"]
_data = PackedByteArray("AAADAAUAAAABAAAAoAAAAGAAAAAsBAAAUklGRiQEAABXRUJQVlA4TBgEAAAvn8AXEI+gKrKthBJ8ufUf8kAFdw2iJpKt5kcU8AUQKgYvaMcACmhzpSaSreZb+GTK7AB5yKLCQPSAgd9SM/8BAIDxj3AhXxDLSETQJBEcnaNfGj9JdMf+T+hWWcTUzrbBSQUKsm3FratLzj5CafUy/9maCwbJVprfVET/HbhtG0lJj8GespPuzhvin9iEGwtBsHNvj6q+6SJOaRgEkl5CptFA8JJeD/gURF3oGKQQ2ne01nP2QMgyXpOSfFagWb0DvrQCErNht0GVvVb4gYc9yKzFnWiEVPcFvRrwqTY+SZq+Snib7DLDT5cSA4S8BsGM4A5vR5uqbTq5a3y2vVaOJNaGchwzXN62rfmfCGoWnAryvGGyfRnPJLWFhT5mxEeZ54tsft2Tv8cxB+aUNQ27E+wEKhg+kuzr8JSoypySXC7EgO945Nop2mwJMWle5wYKDXLKaPX+9XyI2avWBslm9YBeuVbyL+FZs4Bgo2y4ohM8IzkHdHwhT8pQz6cRnzx9ReoDKfHJsyFQFl6KFEt4Nur4VgZpNCWrfAFb3Wv2L/PZmgXs5nGUyDomXe78G/N53r/GOeKTJ/uv6wOXUjpkrf2n5VjbhnwZcKkP8CKfcFdfGADGajb71rb+fSObV/0b8M2pSEFnYDn7FkK8xY2K6AqsKOW+bjJvLh/x/xYJN8YnCPY744tAlRvjQyApbogPKYT2nSbifvjsBkiVHXFDfA0K2GTDDfGJREen4kS+8mo6FoJGV3cjKU7ko5TySjoW7cPebAlBKSfxhcpxlDP4ztK76F6yw5KEk9oz+Joqy2KN71S9S3TsgCQUUWT5KCfwRUK0tc53kt5Fuq3uFUVijEhiOYGvpUJole9MvaVYk3Sb85l1f8iETuDrUmfxnaN39lXCLdVI+35XnMUXL8WXQJhqlxQkgDKS8Y58MprjlAC1UJRBvCFfWmZ91FQ535JPOqZ9nIr35IP4n4mEGwtBsHNvj6q+5PLxOo+ApBecP68PpBDad17oET2Jix+026DKXj0TfmRy7hQ81GFEfP/68fFx7VUAm2xY0zuocQ+yjJfXgM9fP3268peiXRXmr+hSokMYCQ4eFRlDjvG0qarugL58/XrhQrs6jjJ/HoW3bWv6EkHdnwgeVSR58QTPKfnx49u3K18osEuxhGDSOKesoPTwE8FfB0uy7wmeRClZyoVBssOShCVPXWhwzJSzEzxh31M8xPHIDuuigB1IGiIkT0aAjXLrKAaCZ+wb4o1UXBmw1b2iJKQN25rcUK5MKVLM2xfYA7xuXPtPwLalRohwKaVzQLOInd7jaHzzggV6iselfyu5URXd21KsHpGx4BX/Biou31IQ2elyEmopcZLgkgNduoREbmgUpZxdcvE+N5k3l4/493IG")
size_override = Vector2(160, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_x8wmp"]
atlas = SubResource("PortableCompressedTexture2D_uqj3h")
region = Rect2(0, 0, 40, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_kqkdb"]
atlas = SubResource("PortableCompressedTexture2D_uqj3h")
region = Rect2(40, 0, 40, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_l470c"]
atlas = SubResource("PortableCompressedTexture2D_uqj3h")
region = Rect2(80, 0, 40, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_liyrk"]
atlas = SubResource("PortableCompressedTexture2D_uqj3h")
region = Rect2(120, 0, 40, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_kbiqr"]
atlas = SubResource("PortableCompressedTexture2D_uqj3h")
region = Rect2(0, 32, 40, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_lfk1f"]
atlas = SubResource("PortableCompressedTexture2D_uqj3h")
region = Rect2(40, 32, 40, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_tdjjl"]
atlas = SubResource("PortableCompressedTexture2D_uqj3h")
region = Rect2(80, 32, 40, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vfavb"]
atlas = SubResource("PortableCompressedTexture2D_uqj3h")
region = Rect2(120, 32, 40, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_uyhu4"]
atlas = SubResource("PortableCompressedTexture2D_uqj3h")
region = Rect2(0, 64, 40, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8p3fj"]
atlas = SubResource("PortableCompressedTexture2D_uqj3h")
region = Rect2(40, 64, 40, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_d14mu"]
atlas = SubResource("PortableCompressedTexture2D_uqj3h")
region = Rect2(80, 64, 40, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_y4oep"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_x8wmp")
}],
"loop": false,
"name": &"idle",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_kqkdb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l470c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_liyrk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kbiqr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lfk1f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tdjjl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vfavb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kbiqr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uyhu4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kqkdb")
}],
"loop": false,
"name": &"reload",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8p3fj")
}, {
"duration": 10.0,
"texture": SubResource("AtlasTexture_d14mu")
}, {
"duration": 5.0,
"texture": SubResource("AtlasTexture_x8wmp")
}],
"loop": false,
"name": &"shot",
"speed": 50.0
}]

[sub_resource type="Animation" id="Animation_x8wmp"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.8, 0.8)]
}

[sub_resource type="Animation" id="Animation_uqj3h"]
resource_name = "equip"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.619592, 0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0.8, 0.8), Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_kqkdb"]
_data = {
&"RESET": SubResource("Animation_x8wmp"),
&"equip": SubResource("Animation_uqj3h")
}

[node name="M15" type="Node2D"]
y_sort_enabled = true
script = ExtResource("2_xu0o0")
damage = 3
knockback = 500.0
recoil = 250.0
mag_size = 2
reload_time = 1.5
audio_streams = Array[AudioStream]([ExtResource("2_qd8bx"), ExtResource("3_dvofk")])

[node name="AudioBus1" parent="." instance=ExtResource("4_crth4")]
stream = SubResource("AudioStreamRandomizer_uuhya")

[node name="AudioBus2" parent="." instance=ExtResource("4_crth4")]
stream = SubResource("AudioStreamRandomizer_qd8bx")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
y_sort_enabled = true
texture_filter = 1
material = SubResource("ShaderMaterial_kqkdb")
position = Vector2(1, 6)
scale = Vector2(0.8, 0.8)
sprite_frames = SubResource("SpriteFrames_y4oep")
animation = &"idle"
offset = Vector2(7, -3)
metadata/_aseprite_wizard_interface_config_ = {
"layer_section": true,
"pending_changes": {}
}
metadata/_aseprite_wizard_config_ = {
"embed_tex": true,
"layers": [],
"o_ex_p": "",
"o_folder": "",
"o_name": "",
"only_visible": false,
"should_round_fps": true,
"slice": "",
"source": "res://weapons/ally/m15/M15.aseprite"
}
metadata/_aseprite_wizard_source_file_hash_ = "5a78c4ce03335ee147efee7cf8cf78b9"

[node name="AnimationPlayer" type="AnimationPlayer" parent="AnimatedSprite2D"]
libraries = {
&"": SubResource("AnimationLibrary_kqkdb")
}

[node name="BulletSpawnerComponent" parent="." instance=ExtResource("3_1ifyx")]
position = Vector2(0, 1)
target_position = Vector2(20, 0)

[node name="FullAutoComponent" parent="." instance=ExtResource("6_n1vsn")]
fire_rate = 5

[node name="ReloadSound2Timer" type="Timer" parent="."]
one_shot = true
